# iwasscam-ai

./: .gitignore  CLAUDE.md  README.md  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml  render.yaml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 3185515645c2_create_scans_and_findings_tables.py  a4f8e2b91c3d_add_rag_documents.py
backend/app/: main.py
backend/app/agents/: image_agent.py  prompts.py  qr_agent.py  social_engineering_agent.py  text_agent.py  url_agent.py
backend/app/api/v1/: health.py  router.py  scan.py
backend/app/core/: config.py  guardrails.py  logging.py  tracing.py
backend/app/data/: seed_knowledge.py
backend/app/db/: session.py
backend/app/db/models/: rag_document.py  scan.py
backend/app/db/repositories/: rag_repo.py  scan_repo.py
backend/app/middleware/: request_id.py  request_size.py  security_headers.py
backend/app/schemas/: scan.py
backend/app/services/: clamav_service.py  embedding_service.py  image_sanitizer.py  ocr_service.py  qr_service.py  rag_service.py  safe_fetch.py  url_intelligence.py
backend/app/workers/: celery_app.py  tasks.py
backend/eval/: dataset.py  test_deepeval.py
backend/tests/: conftest.py  test_social_engineering.py  test_tasks.py  test_text_agent.py
backend/tests/agents/: test_image_agent.py  test_qr_agent.py  test_url_agent.py
backend/tests/api/: test_scan_image.py  test_scan_list.py  test_scan_qr.py  test_scan_text.py  test_scan_url.py
backend/tests/db/: test_scan_repo.py
backend/tests/integration/: test_health.py
backend/tests/middleware/: test_middleware.py
backend/tests/services/: test_clamav_service.py  test_embedding_service.py  test_image_sanitizer.py  test_ocr_service.py  test_qr_service.py  test_rag_service.py  test_safe_fetch.py  test_url_intelligence.py
backend/tests/unit/: test_guardrails.py  test_schemas.py  test_tracing.py
docs/: DEPLOYMENT.md  (+1 more)
(+49 files in other folders)
