[project]
name = "iwasscam-backend"
version = "0.1.0"
description = "IwasScam AI — FastAPI backend for scam detection"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
    "tldextract>=5.1.0",
    "python-whois>=0.9.5",
    "langchain-ollama>=0.2.0",
    "fastembed>=0.4.0",
    "pgvector>=0.3.0",
    "python-json-logger>=3.0.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.13",
    "pyzbar>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
]
eval = [
    "deepeval>=0.21.0",
    "ragas>=0.1.0",
]
observability = [
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-exporter-otlp-proto-http>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = ["tests/*", "alembic/*", "app/workers/*", "app/data/seed_knowledge.py"]
